Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48130

Calling winId() on a widget breaks QOpenGLWidget/QQuickWidget/QWebEngineView in the same TLW

XMLWordPrintable

    • 7c6625b105511191f739d07dc658094ff6f682ac, 6f69a313bd03c4a96f3efcd1ea00068fd5d572e9

      Black hole are displayed instead of QWebEngineView, if it is placed inside QMdiSubWindow and some of MDI sub windows have WA_NativeWindow attribute. Note that there are also a drawing issue with QLineEdit while QWebEngineView is running. At the end, there is a crash inside QtWebEngineCore at windows closing.

      Please, use sources only from attached project with QtCreator.
      Try to change TEST_NATIVE_WINDOW define for testing without WA_NativeWindow attribute.

        1. QtSample.zip
          7 kB
          Serge Lysenko
        2. qtbug48130.zip
          0.8 kB
          Andy Shaw
        3. QTBUG-48130-no-mdi.zip
          2 kB
          Joerg Bornemann
        4. qtbug48130_diaglib.zip
          1 kB
          Friedemann Kleint
        5. qtbug48130.zip
          2 kB
          Laszlo Agocs
        6. qtsample_no_webengine_dep.zip
          3 kB
          Laszlo Agocs
        7. QTBUG-48130-5.6.0-Commit-37c75a2.png
          71 kB
          Tom Ransdell
        8. QTBUG-48130-5.6.0-Commit-37c75a2-opengl_desktop.png
          76 kB
          Tom Ransdell
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lserge Serge Lysenko
            Votes:
            6 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes